--- a/index.html
+++ b/index.html
@@ -426,11 +426,11 @@
                         <div class="row align-items-center">
                             <div class="col-md-6">
                                 <div class="contact-info">
-                                    <p><i class="fa fa-user"></i>Michael Miller</p>
-                                    <p><i class="fa fa-tag"></i>Web Designer & Developer</p>
-                                    <p><i class="fa fa-envelope"></i><a href="mailto:info@example.com">info@example.com</a></p>
-                                    <p><i class="fa fa-phone"></i><a href="tel:+1234567890">+123-456-7890</a></p>
-                                    <p><i class="fa fa-map-marker"></i>123 Street, Los Angeles, CA, USA</p>
+                                    <p><i class="fa fa-user"></i>오 현 수</p>
+                                    <p><i class="fa fa-tag"></i>Back-End Developer</p>
+                                    <p><i class="fa fa-envelope"></i><a href="mailto:gustn960@naver.com">gustn960@naver.com</a></p>
+                                    <p><i class="fa fa-phone"></i><a href="tel:01055131148">82+ 010 - 5513 - 1148</a></p>
+                                    <p><i class="fa fa-map-marker"></i>서울특별시 송파구 거마로 41</p>
                                     <div class="social">
                                         <a class="btn" href=""><i class="fab fa-twitter"></i></a>
                                         <a class="btn" href=""><i class="fab fa-facebook-f"></i></a>
