--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Hyun Soo Oh :: Portfoilo</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Resume Website Template Free Download" name="keywords">
         <meta content="Resume Website Template Free Download" name="description">
@@ -70,7 +71,7 @@
                     	<p>I'm</p>
                        	<h1>OH HYUNSOO</h1>
                        	<h2></h2>
-                       	<div class="typed-text">안녕하세요. 항상 책임감을 갖고 노력하는!, 신입 개발자 오현수가 되겠습니다.</div>	
+                       	<div class="typed-text">안녕하세요. 항상 책임감을 갖고 노력하는!, 신입 개발자 오현수입니다.</div>	
                     </div>
                 </div>
                 <!-- Header End --> 
@@ -117,6 +118,7 @@
                         </div>
                     </div>
                 </div>
+                <!-- About End -->
                 
                 <!-- Education Start -->
                 <div class="education" id="education">
@@ -211,76 +213,127 @@
                             <div class="col-lg-12">
                                 <ul id="portfolio-flters">
                                     <li data-filter="*" class="filter-active">All</li>
-                                    <li data-filter=".web-des">Design</li>
-                                    <li data-filter=".web-dev">Development</li>
-                                    <li data-filter=".dig-mar">Marketing</li>
+                                    <li data-filter=".web-des">Model1</li>
+                                    <li data-filter=".web-dev">Model2</li>
+                                    <li data-filter=".dig-mar">Spring MVC</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="row portfolio-container">
-                            <div class="col-lg-4 col-md-6 portfolio-item web-des">
+                            <div class="col-lg-5 col-md-6 portfolio-item web-des">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/portfolio-1.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-1.jpg" data-lightbox="portfolio" data-title="Project Name" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <img src="img/ebookProject.PNG" class="img-fluid" alt="">
+                                        <a href="img/ebookProject.PNG" data-lightbox="portfolio" data-title="Project Name" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                        <a class="portfolio-title" href="#">Project Name <span>Web Design</span></a>
+                                        <a class="portfolio-title" href="#review1">프로젝트 이름 <span>전자책 쇼핑몰 프로젝트</span></a>
                                     </figure>
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 col-md-6 portfolio-item web-des">
-                                <div class="portfolio-wrap">
-                                    <figure>
-                                        <img src="img/portfolio-2.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-2.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
-                                        <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                        <a class="portfolio-title" href="#">Project Name <span>Web Design</span></a>
-                                    </figure>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4 col-md-6 portfolio-item web-dev">
+                            <div class="col-lg-5 col-md-6 portfolio-item web-dev">
                                 <div class="portfolio-wrap">
                                     <figure>
                                         <img src="img/portfolio-3.jpg" class="img-fluid" alt="">
                                         <a href="img/portfolio-3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                        <a class="portfolio-title" href="#">Project Name <span>Web Development</span></a>
+                                        <a class="portfolio-title" href="#review2">프로젝트 이름 <span>달력 프로젝트</span></a>
                                     </figure>
                                 </div>
                             </div>
 
-                            <div class="col-lg-4 col-md-6 portfolio-item web-dev">
-                                <div class="portfolio-wrap">
-                                    <figure>
-                                        <img src="img/portfolio-4.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-4.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
-                                        <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                        <a class="portfolio-title" href="#">Project Name <span>Web Development</span></a>
-                                    </figure>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4 col-md-6 portfolio-item dig-mar">
+                            <div class="col-lg-5 col-md-6 portfolio-item dig-mar">
                                 <div class="portfolio-wrap">
                                     <figure>
                                         <img src="img/portfolio-5.jpg" class="img-fluid" alt="">
                                         <a href="img/portfolio-5.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                        <a class="portfolio-title" href="#">Project Name <span>Digital Marketing</span></a>
+                                        <a class="portfolio-title" href="#review3">프로젝트 이름 <span>TAP 프로젝트</span></a>
                                     </figure>
                                 </div>
                             </div>
-
-                            <div class="col-lg-4 col-md-6 portfolio-item dig-mar">
-                                <div class="portfolio-wrap">
-                                    <figure>
-                                        <img src="img/portfolio-6.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-6.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
-                                        <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                        <a class="portfolio-title" href="#">Project Name <span>Digital Marketing</span></a>
-                                    </figure>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="review" id="review">
+                    <div class="content-inner">                      
+                        <div class="row align-items-center review-slider">
+                            <div class="col-md-12" id="review1">
+                                <div class="review-slider-item">
+                                	<div>
+                                		<h4><b>◈ 전자책 쇼핑몰 Project</b></h4><hr>
+                                        <img src="img/ebookProject.PNG" alt="Image" height="300" width="750">
+                                    </div>
+                                    <div class="review-text">
+                                    	<table border="0" class="table">
+                                        	<tr>
+                                        		<th>프로젝트 방식</th>
+                                        		<td>Model 1</td>
+                                        	</tr>
+                                        	<tr>
+                                        		<th>사용 프로그램</th>
+                                        		<td>Eclipse</td>
+                                        	</tr>
+                                        	<tr>
+                                        		<th>사용 언어</th>
+                                        		<td>JAVA, SQL, HTML</td>
+                                        	</tr>
+                                        	<tr>
+                                        		<th>작업 기간</th>
+                                        		<td>2021.09.14 ~ 2021.10.12</td>
+                                        	</tr>
+                                        	<tr>
+                                        		<th>프로젝트 설명</th>
+                                        		<td>
+                                        			Model1 방식으로 구현한 첫 번째 프로젝트인 전자책 쇼핑몰 프로젝트입니다.<br><br>
+                                        			이용자로는 일반 회원과 관리자로 구분되어 있으며,<br>
+                                        			일반 회원은 전자책 주문, 주문 후 후기작성, 문의 작성을 할 수 있습니다.<br>
+                                        			관리자는 회원 관리, 전자책 관리, 공지사항 관리, 문의 관리를 할 수 있습니다.<br><br>
+                                        			공통 기능으로는 로그인, 회원가입, 개인정보 수정, 회원 탈퇴를 할 수 있습니다. 
+                                        		</td>
+                                        	</tr>
+                                        	<tr>
+                                        		<th>Link</th>
+                                        		<td>
+                                        			<a class="btn btn-outline-danger btn-sm" href="https://github.com/suar0905/shop" target="_blank">Github</a>
+                                        			<a class="btn btn-outline-danger btn-sm" href="http://3.34.40.41/shop/" target="_blank">Project</a>
+                                        		</td>                     
+                                        	</tr>
+                                        </table>   
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12" id="review2">
+                                <div class="review-slider-item">
+                                    <div class="review-text">
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat.
+                                        </p>
+                                    </div>
+                                    <div class="review-img">
+                                        <img src="img/review-2.jpg" alt="Image">
+                                        <div class="review-name">
+                                            <h3>Client Name</h3>
+                                            <p>Profession</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-12" id="review3">
+                                <div class="review-slider-item">
+                                    <div class="review-text">
+                                        <p>
+                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat.
+                                        </p>
+                                    </div>
+                                    <div class="review-img">
+                                        <img src="img/review-3.jpg" alt="Image">
+                                        <div class="review-name">
+                                            <h3>Client Name</h3>
+                                            <p>Profession</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -327,9 +380,9 @@
                             <div class="col-md-6">
                                 <div class="exp-col">
                                     <h3>◈ DataBase</h3><br>
-                                    <h5>MySql(MariaDB)</h5>
+                                    <h5>MariaDB(HeidiSQL)</h5>
                                     <h5>Oracle</h5>
-                                    <br>
+                                    <h5>MySQL</h5>
                                     <p></p>
                                 </div>
                             </div>
