--- a/index.html
+++ b/index.html
@@ -91,11 +91,6 @@
                         <div class="content-header">
                         	<div class="d-flex justify-content-between align-items-center">
                             	<h2>About Me</h2>
-                            	<ol style="list-style: none;">
-									<li>
-										<a class="btn" href="img/첫 자기소개서.pdf"><i class="fa fa-download"></i>Resume</a>
-									</li>
-								</ol>
                             </div>
                         </div>
                         <div class="row align-items-center">
@@ -225,7 +220,7 @@
                                     <figure>
                                         <img src="img/ebookProject.PNG" class="img-fluid" alt="">
                                         <a href="img/ebookProject.PNG" data-lightbox="portfolio" data-title="Project Name" class="link-preview" title="Preview"><i class="fa fa-eye"></i></a>
-                                        <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
+                                        <a href="https://github.com/suar0905/shop" target="_blank" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
                                         <a class="portfolio-title" href="#review1">프로젝트 이름 <span>전자책 쇼핑몰 프로젝트</span></a>
                                     </figure>
                                 </div>
@@ -234,9 +229,9 @@
                             <div class="col-lg-5 col-md-6 portfolio-item web-dev">
                                 <div class="portfolio-wrap">
                                     <figure>
-                                        <img src="img/portfolio-3.jpg" class="img-fluid" alt="">
-                                        <a href="img/portfolio-3.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
-                                        <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
+                                        <img src="img/todoProject.PNG" class="img-fluid" alt="">
+                                        <a href="img/todoProject.PNG" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
+                                        <a href="https://github.com/suar0905/Todo" target="_blank" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
                                         <a class="portfolio-title" href="#review2">프로젝트 이름 <span>달력 프로젝트</span></a>
                                     </figure>
                                 </div>
@@ -248,7 +243,7 @@
                                         <img src="img/portfolio-5.jpg" class="img-fluid" alt="">
                                         <a href="img/portfolio-5.jpg" class="link-preview" data-lightbox="portfolio" data-title="Project Name" title="Preview"><i class="fa fa-eye"></i></a>
                                         <a href="#" class="link-details" title="More Details"><i class="fa fa-link"></i></a>
-                                        <a class="portfolio-title" href="#review3">프로젝트 이름 <span>TAP 프로젝트</span></a>
+                                        <a class="portfolio-title" href="#review3">프로젝트 이름 <span>TAP 프로젝트[진행중...]</span></a>
                                     </figure>
                                 </div>
                             </div>
@@ -273,7 +268,7 @@
                                         	</tr>
                                         	<tr>
                                         		<th>사용 프로그램</th>
-                                        		<td>Eclipse</td>
+                                        		<td>Eclipse, HeidiSQL</td>
                                         	</tr>
                                         	<tr>
                                         		<th>사용 언어</th>
@@ -306,33 +301,55 @@
                             </div>
                             <div class="col-md-12" id="review2">
                                 <div class="review-slider-item">
-                                    <div class="review-text">
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat.
-                                        </p>
+                                    <div>
+                                		<h4><b>◈ 달력 Project</b></h4><hr>
+                                        <img src="img/todoProject.PNG" alt="Image" height="300" width="750">
                                     </div>
-                                    <div class="review-img">
-                                        <img src="img/review-2.jpg" alt="Image">
-                                        <div class="review-name">
-                                            <h3>Client Name</h3>
-                                            <p>Profession</p>
-                                        </div>
+                                    <div class="review-text">                                 
+                                    	<table border="0" class="table">
+	                                    	<tr>
+	                                       		<th>프로젝트 방식</th>
+	                                       		<td>Model 2</td>
+	                                       	</tr>
+	                                       	<tr>
+	                                       		<th>사용 프로그램</th>
+	                                       		<td>Eclipse, HeidiSQL</td>
+	                                       	</tr>
+	                                       	<tr>
+	                                       		<th>사용 언어</th>
+	                                       		<td>JAVA, SQL, HTML</td>
+	                                       	</tr>
+	                                       	<tr>
+	                                       		<th>작업 기간</th>
+	                                       		<td>2021.11.08 ~ 2021.11.18</td>
+	                                       	</tr>
+	                                       	<tr>
+	                                       		<th>프로젝트 설명</th>
+	                                       		<td>
+	                                       			Model2 방식으로 구현된 간단한 달력 프로젝트입니다.<br><br>
+	                                       			사용자는 회원가입, 로그인, 달력 보기, 일정 추가, 수정, 삭제를 할 수 있습니다.<br>
+	                                       			Model1 방식과 달리 MVC패턴 방법을 이용한 첫 프로젝트이기도 합니다. 
+	                                       		</td>
+	                                       	</tr>
+	                                       	<tr>
+	                                       		<th>Link</th>
+	                                       		<td>
+	                                       			<a class="btn btn-outline-danger btn-sm" href="https://github.com/suar0905/Todo" target="_blank">Github</a>
+	                                       		</td>                     
+	                                       	</tr>
+	                                	</table>                                       
                                     </div>
                                 </div>
-                            </div>
+                            </div> 
                             <div class="col-md-12" id="review3">
                                 <div class="review-slider-item">
-                                    <div class="review-text">
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu suscipit orci. Donec molestie velit id libero blandit, quis suscipit urna suscipit. Donec aliquet erat eu lacinia iaculis. Ut tempor tellus eu sem pharetra feugiat.
-                                        </p>
+                                    <div>
+                                		<h4><b></b></h4><hr>
+                                        <img src="img/ebookProject.PNG" alt="Image" height="300" width="750">
                                     </div>
-                                    <div class="review-img">
-                                        <img src="img/review-3.jpg" alt="Image">
-                                        <div class="review-name">
-                                            <h3>Client Name</h3>
-                                            <p>Profession</p>
-                                        </div>
+                                    <div class="review-text">                                 
+                                    	
+	                                    	
                                     </div>
                                 </div>
                             </div>
